ui: Fix alignment of short comments

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -521,6 +521,9 @@ form + .login-label {
 .history-data .text-muted {
   font-size: 14px;
 }
+.history-data {
+  padding-bottom: 4px;
+}
 
 .history-event p {
   margin-left: 34px;
